--- a/src/stylesheets/components/MiscMenu/_misc-menu.scss
+++ b/src/stylesheets/components/MiscMenu/_misc-menu.scss
@@ -16,19 +16,21 @@
   }
 
   &__menu {
+    overflow: hidden;
+
     width: rem(192);
 
     left: 100%;
+    transform: translateX(-100%);
 
-    padding-block: 0.5rem;
+    box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.101545);
 
-    z-index: -1;
-
-    transition: transform $opening-duration;
+    transition: height $opening-duration, padding $opening-duration;
 
     & > * {
       cursor: pointer;
     }
+
     & > *:last-child {
       color: var(--clr-primary-700);
 
@@ -39,10 +41,14 @@
   }
 
   &__menu--close {
-    transform: translate(-100%, -100%);
+    height: 0;
+
+    padding-block: 0;
   }
 
   &__menu--open {
-    transform: translate(-100%, 0);
+    height: rem(90);
+
+    padding-block: 0.5rem;
   }
 }
